--- a/src/pages/message-detail/message-detail.html
+++ b/src/pages/message-detail/message-detail.html
@@ -14,15 +14,25 @@
 
 
 <ion-content>
-  <ion-list>
-    <ion-item>
-      <h2>{{item.head}}</h2>
-      <p>
-        {{item.body}}
-      </p>
-    </ion-item>
-   <div style="margin-left: 5vw">
-     {{item.pushDate}}
-   </div>
-  </ion-list>
+  <div style="padding-left: 5vw">
+    <!--<h2>{{item.head}}</h2>-->
+    <p class="content-message">
+      {{item.body}}
+    </p>
+    <p>
+      {{item.pushDate}}
+    </p>
+  </div>
+
+  <!--<ion-list>-->
+    <!--<ion-item>-->
+      <!--<h2>{{item.head}}</h2>-->
+      <!--<p>-->
+        <!--{{item.body}}-->
+      <!--</p>-->
+    <!--</ion-item>-->
+   <!--<div style="margin-left: 5vw">-->
+     <!--{{item.pushDate}}-->
+   <!--</div>-->
+  <!--</ion-list>-->
 </ion-content>
