--- a/src/pages/consume-record-week/consume-record-week.html
+++ b/src/pages/consume-record-week/consume-record-week.html
@@ -8,7 +8,7 @@
       </div>
       <p style="line-height: 35px">
         <ion-badge>{{item.mealType}}</ion-badge>
-        {{item.dinnerDate}} {{item.factoryName}}-{{item.officeName}}
+        {{item.payDate}} {{item.factoryName}}-{{item.officeName}}
       </p>
     </ion-item>
   </ion-list>
