--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
     <ion-title>
       <div style="margin: 15px 0" >
         <p>{{userName}}</p>
-        <p class="cut-title">{{ 'HOME.WELCOME' | translate }}{{factoryName}}</p>
+        <p class="cut-title">{{'HOME.WELCOME' | translate }}{{factoryName}}</p>
       </div>
     </ion-title>
     <ion-buttons *ngIf="messageCount > 0" end>
@@ -81,7 +81,7 @@
     <ion-card >
       <img class="img-item" src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>
       <div class="order-tile">
-        {{'HOME.NEWS' | translate }}
+        <!--{{'HOME.NEWS' | translate }}-->
       </div>
     </ion-card>
   </div>
