--- a/src/pages/waiting-use-list/waiting-use-list.html
+++ b/src/pages/waiting-use-list/waiting-use-list.html
@@ -41,6 +41,11 @@
         <ion-item>
           <!--<img src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>-->
           <img src="{{p.blobPath}}"/>
+
+          <div class="back-ground">
+
+          </div>
+
           <div class="card-title">
             <div style="font-size: 3rem">
               {{p.mealType}}
