--- a/src/pages/overdue/overdue.html
+++ b/src/pages/overdue/overdue.html
@@ -20,7 +20,7 @@
     </ion-buttons>
     <ion-buttons end>
       <button tappable ion-button icon-only (click)="gotoHomePage()" >
-        <ion-icon color="Gray-color" name="ios-more">
+        <ion-icon color="Gray-color" name="ios-home-outline">
         </ion-icon>
       </button>
     </ion-buttons>
