--- a/src/pages/consume-record-month/consume-record-month.html
+++ b/src/pages/consume-record-month/consume-record-month.html
@@ -4,7 +4,7 @@
       <h2>{{item.productName}}</h2>
       <div item-end>
         <h3 style="margin-left: 10px">{{item.price}}{{'CONSUME.UNIT' | translate}}</h3>
-        <button ion-button >{{'CONSUME.ACTION' | translate}}</button>
+        <!--<button ion-button >{{'CONSUME.ACTION' | translate}}</button>-->
       </div>
       <p style="line-height: 35px">
         <ion-badge>{{item.mealType}}</ion-badge>
