--- a/src/pages/home-menu/home-menu.html
+++ b/src/pages/home-menu/home-menu.html
@@ -42,9 +42,9 @@
         <ion-badge color="danger" item-end>{{messageCount}}</ion-badge>
       </button>
 
-      <button ion-item  (click)="qrScan()">
-        扫一扫
-      </button>
+      <!--<button ion-item  (click)="qrScan()">-->
+        <!--扫一扫-->
+      <!--</button>-->
       <!--<button ion-item  (click)="openPage('listPage')">-->
         <!--新闻-->
       <!--</button>-->
