--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,7 +11,7 @@
 
     <ion-item class="input-inner">
       <ion-label  stacked>密码：</ion-label>
-      <ion-input [(ngModel)]="password" class="pwd-input"  type="{{type}}" clearInput></ion-input>
+      <ion-input placeholder="请输入'溢达通'登录密码" [(ngModel)]="password" class="pwd-input"  type="{{type}}" clearInput></ion-input>
       <ion-icon tappable class="icon-eye" *ngIf="type !== 'password'"  item-right name="ios-eye-outline" (click)="changeType($event)"></ion-icon>
       <ion-icon tappable class="icon-eye" *ngIf="type === 'password'" item-right name="ios-eye" (click)="changeType($event)"></ion-icon>
     </ion-item>
@@ -19,10 +19,10 @@
   </ion-list>
 
   <div padding>
-    <button ion-button color="Gray-color" block (click)="doLogin()"  [disabled]="btnStatus">登陆</button>
+    <button ion-button color="Gray-color" block (click)="doLogin()"  [disabled]="btnStatus">登录</button>
   </div>
   <div>
-    <span tappable (click)="openForgetPwd()" class="forget-pwd">忘记密码?</span>
+    <!--<span tappable (click)="openForgetPwd()" class="forget-pwd">忘记密码?</span>-->
   </div>
   <div class="logo">
     <img src='assets/imgs/login_logo.png' alt="">
