--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -89,5 +89,11 @@
       </div>
     </ion-card>
   </div>
+
 </ion-content>
+
+<!--二维码按钮-->
+<!--<div class="qrcode-btn" tappable (click)="gotoQRCodePage()">-->
+  <!--<img src="assets/imgs/QR_code.png" alt="">-->
+<!--</div>-->
 
