--- a/src/pages/feed-back-detail/feed-back-detail.html
+++ b/src/pages/feed-back-detail/feed-back-detail.html
@@ -51,7 +51,7 @@
     </div>
   </div>
   <button (click)="uploadImg()" style="margin: 5px;width: 20vw;height: 10vh;border: .5px #c8c7cc solid">
-    <ion-icon name="ios-add-outline"></ion-icon>
+    <img style="width: 32px;height: 32px;margin-top: 5px" src="assets/imgs/plus.png" alt="">
     <p>
       {{'FEED_DETAIL.BTN_TEXT' | translate}}
     </p>
