--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -116,7 +116,7 @@
                     </ion-slide>
                   </ion-slides>
                   <ion-item tappable (click)="showDetailModal(de, p.id, item.value)">
-                    <p class="product-title">{{de.name}}</p>
+                    <p class="product-title">{{de.name}} <span style="margin-left: 10px">¥{{de.price}}</span></p>
                     <p class="message-content">包括： {{de.productName}} </p>
                     <button class="order-button" ion-button color="secondary" (click)="doOrder($event, de, p.id, item.value)">订餐</button>
                     <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
@@ -159,7 +159,7 @@
                     </ion-slide>
                   </ion-slides>
                   <ion-item tappable (click)="showDetailModal(de, p.id, item.value)">
-                    <p class="product-title">{{de.name}}</p>
+                    <p class="product-title">{{de.name}}<span style="margin-left: 10px">¥{{de.price}}</span></p>
                     <p class="message-content">包括： {{de.productName}} </p>
                     <button class="order-button" ion-button color="secondary" (click)="doOrder($event, de, p.id, item.value)">订餐</button>
                     <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
@@ -202,7 +202,7 @@
                     </ion-slide>
                   </ion-slides>
                   <ion-item tappable (click)="showDetailModal(de, p.id, item.value)">
-                    <p class="product-title">{{de.name}}</p>
+                    <p class="product-title">{{de.name}}<span style="margin-left: 10px">¥{{de.price}}</span></p>
                     <p class="message-content">包括： {{de.productName}} </p>
                     <button class="order-button" ion-button color="secondary" (click)="doOrder($event, de, p.id, item.value)">订餐</button>
                     <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
