--- a/src/pages/home-menu/home-menu.html
+++ b/src/pages/home-menu/home-menu.html
@@ -12,7 +12,7 @@
     <ion-list-header class="list-header">
       <span>预定</span>
     </ion-list-header>
-    <button class="inner-list"  ion-item (click)="openPage('homePage')">
+    <button class="inner-list"  ion-item (click)="gotoHome('homePage')">
       立即预定
     </button>
     <!--<button class="inner-list"  ion-item (click)="openPage('weekMenu')">-->
