--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,18 @@
 <ion-header >
   <ion-navbar>
-    <ion-buttons start>
-      <button tappable ion-button icon-only (click)="goHomeMenuPage()">
-        <ion-icon color="Gray-color" name="menu"></ion-icon>
-      </button>
-    </ion-buttons>
+
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+
+    <!--<ion-buttons start>-->
+      <!--<button tappable ion-button icon-only (click)="goHomeMenuPage()">-->
+        <!--<ion-icon color="Gray-color" name="menu"></ion-icon>-->
+      <!--</button>-->
+    <!--</ion-buttons>-->
     <ion-title>
       <div style="margin: 15px 0" >
-        <p>{{userName}}</p>
+        <p tappable (click)="gotoQRCodePage()">{{userName}}</p>
         <p class="cut-title">{{'HOME.WELCOME' | translate }}{{factoryName}}</p>
       </div>
     </ion-title>
