--- a/src/pages/overdue/overdue.html
+++ b/src/pages/overdue/overdue.html
@@ -1,11 +1,14 @@
 
 <ion-header>
   <ion-navbar>
-    <ion-buttons start>
-      <button tappable ion-button icon-only (click)="goHomeMenuPage()">
-        <ion-icon color="Gray-color" name="menu"></ion-icon>
-      </button>
-    </ion-buttons>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <!--<ion-buttons start>-->
+      <!--<button tappable ion-button icon-only (click)="goHomeMenuPage()">-->
+        <!--<ion-icon color="Gray-color" name="menu"></ion-icon>-->
+      <!--</button>-->
+    <!--</ion-buttons>-->
     <ion-title>
       <div style="margin: 15px 0" >
         <p>逾期未取餐</p>
