--- a/src/pages/select-type/select-type.html
+++ b/src/pages/select-type/select-type.html
@@ -6,11 +6,14 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-buttons start>
-      <button tappable ion-button icon-only (click)="goHomeMenuPage()">
-        <ion-icon name="menu"></ion-icon>
-      </button>
-    </ion-buttons>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <!--<ion-buttons start>-->
+      <!--<button tappable ion-button icon-only (click)="goHomeMenuPage()">-->
+        <!--<ion-icon name="menu"></ion-icon>-->
+      <!--</button>-->
+    <!--</ion-buttons>-->
     <ion-title>
       <div>
         <span>Jimmy</span><br/>
