--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -59,14 +59,14 @@
   </ion-card>
 
   <ion-card *ngIf="(isNull && orderList.length === 0)">
-    <img tappable (click)="gotoOrder(factoryName)" class="img-item" src="assets/imgs/noData.png"/>
+    <img tappable (click)="gotoOrder(factoryName)" class="img-item" src="https://dininghall.oss-cn-shenzhen.aliyuncs.com/uat/ui/index_002.jpg"/>
   </ion-card>
 
 
 
 
   <ion-card tappable (click)="gotoOrder(factoryName)">
-    <img class="img-item" src="https://dininghall.blob.core.windows.net/product/473c5d4611c74be3acc05a6b54cca853.png"/>
+    <img class="img-item" src="https://dininghall.oss-cn-shenzhen.aliyuncs.com/uat/ui/index_003.png"/>
     <div class="order-tile">
       {{'HOME.ORDER' | translate }}
     </div>
