--- a/src/pages/waiting-use-list/waiting-use-list.html
+++ b/src/pages/waiting-use-list/waiting-use-list.html
@@ -38,7 +38,7 @@
   <ion-list no-lines>
     <div *ngFor="let p of item?.list" class="my-card">
       <ion-item-sliding>
-        <ion-item>
+        <ion-item tappable (click)="gotoRecordDetail(p)">
           <!--<img src="https://dininghall.blob.core.windows.net/product/bb4ecee246e44ebdad0ef41ca1e8320e.png"/>-->
           <img src="{{p.blobPath}}"/>
 
