--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -112,20 +112,18 @@
                 <ion-icon [@expandDetail]="p.direction" name="ios-arrow-down" item-end></ion-icon>
               </ion-item>
               <div [@expandDetail]="p.status" class="product-list-detail">
-                <div *ngFor="let de of p.productList" class="product-item-detail" >
-                  <ion-slides [autoplay]="2000" [loop]="de.imgUrl.length > 1" pager>
+                <div *ngFor="let de of p.productList" class="product-item-detail" tappable (click)="showDetailModal(de, p.id, item.value)">
 
-                    <img src="{{de.imgMainUrl}}"/>
+                  <img src="{{de.imgMainUrl}}"/>
+                  <!--<img src='assets/imgs/Blank_Image_2.png' alt="">-->
 
-                    <!--轮播图-->
-                    <!--<ion-slide *ngFor="let path of de?.imgUrl">-->
-                      <!--<img src="{{path}}"/>-->
-                    <!--</ion-slide>-->
+                  <!--轮播图-->
+                  <!--<ion-slide *ngFor="let path of de?.imgUrl">-->
+                  <!--<img src="{{path}}"/>-->
+                  <!--</ion-slide>-->
 
-
-                  </ion-slides>
-                  <ion-item tappable (click)="showDetailModal(de, p.id, item.value)">
-                    <p class="product-title">{{de.name}} <span style="margin-left: 10px">¥{{de.price}}</span></p>
+                  <ion-item>
+                    <p class="product-title">{{de.name}}<span style="margin-left: 10px">¥{{de.price}}</span></p>
                     <p class="message-content">包括： {{de.productName}} </p>
                     <button class="order-button" ion-button color="secondary" (click)="doOrder($event, de, p.id, item.value)">订餐</button>
                     <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
@@ -161,16 +159,17 @@
                 <ion-icon [@expandDetail]="p.direction" name="ios-arrow-down" item-end></ion-icon>
               </ion-item>
               <div [@expandDetail]="p.status" class="product-list-detail">
-                <div *ngFor="let de of p.productList" class="product-item-detail" >
+                <div *ngFor="let de of p.productList" class="product-item-detail" tappable (click)="showDetailModal(de, p.id, item.value)">
 
                   <img src="{{de.imgMainUrl}}"/>
+                  <!--<img src='assets/imgs/Blank_Image_2.png' alt="">-->
 
                   <!--轮播图-->
                   <!--<ion-slide *ngFor="let path of de?.imgUrl">-->
                   <!--<img src="{{path}}"/>-->
                   <!--</ion-slide>-->
 
-                  <ion-item tappable (click)="showDetailModal(de, p.id, item.value)">
+                  <ion-item>
                     <p class="product-title">{{de.name}}<span style="margin-left: 10px">¥{{de.price}}</span></p>
                     <p class="message-content">包括： {{de.productName}} </p>
                     <button class="order-button" ion-button color="secondary" (click)="doOrder($event, de, p.id, item.value)">订餐</button>
@@ -207,7 +206,7 @@
                 <ion-icon [@expandDetail]="p.direction" name="ios-arrow-down" item-end></ion-icon>
               </ion-item>
               <div [@expandDetail]="p.status" class="product-list-detail">
-                <div *ngFor="let de of p.productList" class="product-item-detail" >
+                <div *ngFor="let de of p.productList" class="product-item-detail" tappable (click)="showDetailModal(de, p.id, item.value)">
 
                   <img src="{{de.imgMainUrl}}"/>
                   <!--<img src='assets/imgs/Blank_Image_2.png' alt="">-->
@@ -217,7 +216,7 @@
                   <!--<img src="{{path}}"/>-->
                   <!--</ion-slide>-->
 
-                  <ion-item tappable (click)="showDetailModal(de, p.id, item.value)">
+                  <ion-item>
                     <p class="product-title">{{de.name}}<span style="margin-left: 10px">¥{{de.price}}</span></p>
                     <p class="message-content">包括： {{de.productName}} </p>
                     <button class="order-button" ion-button color="secondary" (click)="doOrder($event, de, p.id, item.value)">订餐</button>
